--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,3 @@
-// import { TaskManager } from "./main.js";
-
 .tasks-blocks {
 	display: flex;
 	justify-content: space-around;
@@ -8,4 +6,60 @@
 		border: 2px solid black;
 		min-height: 400px;
 	}
+}
+
+.menu {
+	position: fixed;
+	&__button {
+		border-radius: 5px;
+		padding: 10px 5px;
+		background-color: black;
+		color: white;
+		box-shadow: -3px 14px 5px 2px black;
+	}
+}
+
+.modal {
+	background-color: rgba(203, 195, 195, 0.823);
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0px;
+	left: 0px;
+
+	display: none;
+	justify-content: center;
+	align-items: center;
+
+	&__enter {
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.active {
+	display: flex;
+}
+
+.tasks-blocks__cards {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.tasks-blocks__card {
+	background-color: rgb(117, 114, 114);
+	color: rgb(24, 24, 24);
+	text-align: center;
+}
+.tasks-blocks__card_title {
+	padding: 10px 0;
+}
+.tasks-blocks__card_description {
+	border-top: 2px solid rgb(232, 224, 224);
+	padding: 20px 0;
+}
+
+.btns-Card {
+	position: fixed;
 }
