--- a/styles/main.css
+++ b/styles/main.css
@@ -1,67 +1,75 @@
 .tasks-blocks {
-  display: flex;
-  justify-content: space-around;
+	display: flex;
+	justify-content: space-around;
 }
 .tasks-blocks__block {
-  width: 30%;
-  border: 2px solid black;
-  min-height: 400px;
+	width: 30%;
+	border: 2px solid black;
+	min-height: 400px;
 }
 
 .menu {
-  position: fixed;
+	position: fixed;
 }
 .menu__button {
-  border-radius: 5px;
-  padding: 10px 5px;
-  background-color: black;
-  color: white;
-  box-shadow: -3px 14px 5px 2px black;
+	border-radius: 5px;
+	padding: 10px 5px;
+	background-color: black;
+	color: white;
+	box-shadow: -3px 14px 5px 2px black;
 }
 
 .modal {
-  background-color: rgba(203, 195, 195, 0.823);
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0px;
-  left: 0px;
-  display: none;
-  justify-content: center;
-  align-items: center;
+	background-color: rgba(203, 195, 195, 0.823);
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0px;
+	left: 0px;
+	display: none;
+	justify-content: center;
+	align-items: center;
 }
 .modal__enter {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .active {
-  display: flex;
+	display: flex;
 }
 
 .tasks-blocks__cards {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
 }
 
 .tasks-blocks__card {
-  background-color: rgb(117, 114, 114);
-  color: rgb(24, 24, 24);
-  text-align: center;
+	/* background-color: rgb(117, 114, 114); */
+	color: rgb(24, 24, 24);
+	border: 1px solid black;
+	text-align: center;
 }
 
 .tasks-blocks__card_title {
-  padding: 10px 0;
+	padding: 10px 0;
+	border-bottom: 1px solid black;
 }
 
 .tasks-blocks__card_description {
-  border-top: 2px solid rgb(232, 224, 224);
-  padding: 20px 0;
+	padding: 20px 0;
 }
 
-.btns-Card {
-  position: fixed;
+.btns-card {
+	position: fixed;
+}
+
+.btn-card {
+	border-radius: 5px;
+	padding: 10px 5px;
+	background-color: black;
+	color: white;
+	box-shadow: -3px 14px 5px 2px black;
 }
 
 /*# sourceMappingURL=main.css.map */
